--- a/dashboard/style.css
+++ b/dashboard/style.css
@@ -306,20 +306,20 @@ body {
     padding: 10px;
     background-color: white;
     min-height: 280px;
-    height: 46vh;
+    height: 45vh;
 }
 
 .butterfly-section h3,
 .linechart-section h3 {
     text-align: center;
-    margin-bottom: 0.5vw;
+    margin: 5px;
     font-size: 20px;
     font-weight: bold;
 }
 
 .ButterflyChart {
     width: 100%;
-    height: 280px;
+    height: 40vh;
     background-color: #f9f9f9;
     display: flex;
     align-items: center;
@@ -340,8 +340,8 @@ body {
 
 .LineChart {
     width: 100%;
-    height: 100%;
-    min-height: 150px;
+    height: 40vh;
+    min-height: 280px;
 }
 
 
