--- a/dashboard/style.css
+++ b/dashboard/style.css
@@ -327,7 +327,7 @@ body {
     justify-content: center;
     color: #666;
     font-size: 12px;
-    background-image: url('../images/butterfly.jpeg');
+    background-image: url('../images/butterfly-chart.jpeg');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
