--- a/dashboard/style.css
+++ b/dashboard/style.css
@@ -321,7 +321,7 @@ body {
 .ButterflyChart {
     width: 100%;
     height: 40vh;
-    background-color: #f9f9f9;
+    /* background-color: #f9f9f9;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -330,7 +330,7 @@ body {
     background-image: url('../images/butterfly-chart.jpeg');
     background-size: contain;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center; */
 }
 
 .frequency-label {
