--- a/dashboard/style.css
+++ b/dashboard/style.css
@@ -344,12 +344,22 @@ body {
     background-color: white;
     min-height: 280px;
     height: 45vh;
+    position: relative;
 }
 
 .butterfly-section h3,
 .linechart-section h3 {
     text-align: center;
     margin: 5px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.butterfly-title {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 0;
     font-size: 20px;
     font-weight: bold;
 }
